 lib/Math/BigInt/CalcEmu.pm
  * Correct spelling errors.
  * Improve POD formatting.
  * Add meta-documentation (CPAN ratings, CPAN testers matrix, etc.)
  * Remove references to Math::BigInt::BitVect, which is no longer on CPAN.
 Makefile.PL
  * Remove code that checks for compatible versions of distributions that
    depend on Math-BigInt. Such checking should be done in the distributions
    that depend on Math-BigInt, not in Math-BigInt itself.
 NEW
  * This file now only refers to the change log.
 t/bigfltpm.inc
  * Add tests for fint().
 t/bigintpm.inc
  * Add tests for int().
 t/upgrade.inc
  * Add tests for int().
 t/*.t
  * Increment test counts as needed for the new tests in the t/*.inc files.
 inc/Module/Install*
  * Upgrade bundled Module::Install from version 1.01 to version 1.08.

2015-08-10 v1.9994 pjacklam
 CHANGES
  * Add recent changes.
 lib/Math/BigFloat.pm
  * Fix blog() which sometimes returns incorrect result.
  * bdiv() in list context now returns the integer quotient and the remainder.
 t/bigfltpm.inc
  * Modify tests for blog() in list context.
 t/biglog.t
  * Change incorrect use of ok() to is().
 t/upgrade.inc
  * Modify tests for blog() in list context.
 inc/Module/Install*
  * Upgrade bundled Module::Install from version 1.08 to version 1.16.

2015-08-11 v1.9995 pjacklam
 CHANGES
  * Move changes that were incorrectly reported as being for the release 1.9994
    when they were in fact for release 1.9993.
  * Add changes both for release 1.9994 and 1.9995.
 lib/Math/BigInt.pm
  * Break lines to avoid lines with more than 80 characters.
  * Improve objectify() for better handling of subclasses.

2015-08-12 v1.9996 pjacklam
 CHANGES
  * Add recent changes.
  * Use present tense in change descriptions.
 lib/Math/BigInt.pm
  * Change incorrect use of ok() to is() in example.

Please send us test-reports, your experiences with this and your ideas - we love
to hear about our work!

The Math-BigInt developers <bignum@lists.scsys.co.uk>