@@ -4,7 +4,7 @@ use 5.006002;
 use strict;
 # use warnings;	# do not use warnings for older Perls
 
-our $VERSION = '1.9996';
+our $VERSION = '1.9997';
 
 # Package to store unsigned big integers in decimal and do math with them
 
