@@ -1135,7 +1135,7 @@ abc:abc:NaN
 +1:+32:4294967296
 +1:+48:281474976710656
 +8:-2:NaN
-# excercise base 10
+# exercise base 10
 +12345:4:10:123450000
 -1234:0:10:-1234
 +1234:0:10:1234
@@ -1153,7 +1153,7 @@ abc:abc:NaN
 +4294967296:+32:1
 +281474976710656:+48:1
 +2:-2:NaN
-# excercise base 10
+# exercise base 10
 -1234:0:10:-1234
 +1234:0:10:1234
 +200:2:10:2
@@ -1585,7 +1585,7 @@ inf:0:inf,inf
 96969696969696969696969696969678787878626262626262626262626262:484848484848484848484848486666666666666689898989898989898989:199,484848484848484848484848123012121211954972727272727272727451
 # bug in v1.76
 1267650600228229401496703205375:1267650600228229401496703205376:0,1267650600228229401496703205375
-# excercise shortcut for numbers of the same length in div
+# exercise shortcut for numbers of the same length in div
 999999999999999999999999999999999:999999999999999999999999999999999:1,0
 999999999999999999999999999999999:888888888888888888888888888888888:1,111111111111111111111111111111111
 999999999999999999999999999999999:777777777777777777777777777777777:1,222222222222222222222222222222222
