@@ -567,7 +567,7 @@ abc:abc:NaN
 +1:+32:4294967296
 +1:+48:281474976710656
 +8:-2:NaN
-# excercise base 10
+# exercise base 10
 +12345:4:10:123450000
 -1234:0:10:-1234
 +1234:0:10:1234
